--- a/AppSatrack/AppSatrack.Infrastructure/AppSatrack.Infrastructure.csproj
+++ b/AppSatrack/AppSatrack.Infrastructure/AppSatrack.Infrastructure.csproj
@@ -37,6 +37,7 @@
     <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums\PageTypes.cs" />
     <Compile Include="Interfaces\IDialogService.cs" />
     <Compile Include="Interfaces\INavigationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
